usermgmt_lib/src/snapshots/usermgmt_lib__entity__testing__error_for_not_valid_group_of_qos.snap
---
source: usermgmt_lib/src/entity.rs
expression: actual
---
Err(
    "Given qos not_valid is none of the valid qoses",
)
