usermgmt_lib/src/snapshots/usermgmt_lib__entity__testing__ok_with_valid_default_and_group_of_qos_pubkey.snap
---
source: usermgmt_lib/src/entity.rs
expression: actual
---
Ok(
    Entity {
        username: TrimmedNonEmptyText(
            "Some_User",
        ),
        firstname: Some(
            TrimmedNonEmptyText(
                "First",
            ),
        ),
        lastname: None,
        mail: Some(
            TrimmedNonEmptyText(
                "faculty@xxx.de",
            ),
        ),
        group: Some(
            ResolvedGid {
                gid: 1001,
                id: Staff,
            },
        ),
        default_qos: Some(
            ValidQos(
                "valid",
            ),
        ),
        publickey: Some(
            TrimmedNonEmptyText(
                "xxxxxx",
            ),
        ),
        qos: Some(
            ValidGroupOfQos(
                [
                    ValidQos(
                        "valid",
                    ),
                    ValidQos(
                        "basic",
                    ),
                ],
            ),
        ),
    },
)
